differential_testing/gcc_regression/gcc_reg_cb/results/gcc540/save_st/pr69797.c-5.4.0-1.out.txt
pr69797.c: In function ‘foo’:
pr69797.c:7:3: error: too few arguments to function ‘__atomic_fetch_add’
   __atomic_fetch_add ();  
   ^
